--- a/css/extends.css
+++ b/css/extends.css
@@ -1,10 +1,10 @@
-@import '/globals.css';
-@import '/variables.css';
+@import 'portifolioproject/css/globals.css';
+@import 'portifolioproject/css/variables.css';
 
-@import '/components/about.css';
-@import '/components/contact.css';
-@import '/components/education.css';
-@import '/components/header.css';
-@import '/components/footer.css';
-@import '/components/navbar.css';
-@import '/components/projects.css';
+@import 'portifolioproject/css/components/about.css';
+@import 'portifolioproject/css/components/contact.css';
+@import 'portifolioproject/css/components/education.css';
+@import 'portifolioproject/css/components/header.css';
+@import 'portifolioproject/css/omponents/footer.css';
+@import 'portifolioproject/css/components/navbar.css';
+@import 'portifolioproject/css/components/projects.css';
